test_regress/t/t_assert_rep_range_unsup.out
%Warning-MULTITOP: t/t_assert_rep_range_unsup.v:25:8: Multiple top level modules
                                                    : ... Suggest see manual; fix the duplicates, or use --top-module to select top.
                   ... For warning description see https://verilator.org/warn/MULTITOP?v=latest
                   ... Use "/* verilator lint_off MULTITOP */" and lint_on around source to disable this message.
                                                    : ... Top module 't'
   12 | module t;
      |        ^
                                                    : ... Top module 't_dc'
   25 | module t_dc;
      |        ^~~~
%Error-UNSUPPORTED: t/t_assert_rep_range_unsup.v:18:28: Unsupported: [=M:N] nonconsecutive range repetition (IEEE 1800-2023 16.9.2)
                                                      : ... note: In instance 't'
   18 |     @(posedge clk) a |-> b [= 1: 2];
      |                            ^~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_assert_rep_range_unsup.v:34:13: Unsupported: [->M:N] goto range repetition when clock is resolved outside V3AssertNfa (IEEE 1800-2023 16.9.2)
                                                      : ... note: In instance 't_dc'
   34 |     a |-> b [-> 1: 2];
      |             ^~~
%Error: Exiting due to
